curso visual studio code

--- a/src/01-edicion/04-comentarios.html
+++ b/src/01-edicion/04-comentarios.html
@@ -1,6 +1,6 @@
 <!-- * ----------------------
 *    Objetivo:
-*        Ordenar las <li>
+*        Comentar bloques de codigo
 *    
 *    Tips:
 *        ⌘ /
@@ -11,19 +11,20 @@
 * ----------------------------->
 
 <div>
-    <span>Hola</span>
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Eum maiores nostrum cum quasi totam.
-    </p>
+  <span>Hola</span>
+  <p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum maiores nostrum
+    cum quasi totam.
+  </p>
 </div>
 
 <h1>Objetivo final</h1>
 
 <div>
-    <span>Hola</span>
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Eum maiores nostrum cum quasi totam.
-    </p>
+  <!-- <span>Hola</span> -->
+  <p>
+    Lorem ipsum dolor
+    <!-- sit amet consectetur -->
+    adipisicing elit. Eum maiores nostrum cum quasi totam.
+  </p>
 </div>
