--- a/src/01-edicion/05-nuevo-archivo.html
+++ b/src/01-edicion/05-nuevo-archivo.html
@@ -5,8 +5,8 @@
 *        Crear archivo app.js
 *
 *    Tips:
-*        ⌥ click derecho
-*        Ctrl + click derecho
+*        ⌥ click izquierdo
+*        Ctrl + click izquierdo
 * ----------------------------->
 
 <script src="assets/js/app.js"></script>
