--- a/src/01-edicion/11-emmet-wrap.html
+++ b/src/01-edicion/11-emmet-wrap.html
@@ -18,10 +18,6 @@
 
 <p>
     Ejecutar el comando
-    node --version
-    node --version
+    <code>node --version</code>
+    <p class="text-center">node --version</p>
 </p>
-
-
-
-
