--- a/src/02-multi-cursor/02-multi-cursor-basico.html
+++ b/src/02-multi-cursor/02-multi-cursor-basico.html
@@ -10,15 +10,13 @@
 * * ------------------------------------------->
 
 <!--? Desde aquí ?-->
-
-
-
-
-
-
+<li>Hola Mundo</li>
+<li>Hola Mundo</li>
+<li>Hola Mundo</li>
+<li>Hola Mundo</li>
+<li>Hola Mundo</li>
+<li>Hola Mundo</li>
 <!--? Hasta aquí ?-->
-
-
 
 <!--! Objetivo !-->
 
