--- a/src/02-multi-cursor/07-siguiente-ocurrencia.html
+++ b/src/02-multi-cursor/07-siguiente-ocurrencia.html
@@ -9,15 +9,13 @@
 * 
 * --------------------------------------------------------------->
 
-
-<span>Uno</span>
+<p>Uno</p>
 <p>No Span</p>
-<span>Dos</span>
+<p>Dos</p>
 <p>No Span</p>
-<span>Cuarenta y cinco</span>
+<p>Cuarenta y cinco</p>
 <p>No Span</p>
-<span>Un millón, ciento cincuenta mil</span>
-
+<p>Un millón, ciento cincuenta mil</p>
 
 <!--! Objetivo final !-->
 <p>Uno</p>
